# opentelemetry-configurator-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/: renovate.json
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci-vcpkg.yml  ci.yml  clang-tidy.yml  codeql.yml  lint.yml  update-vcpkg-baseline.yml
cmake/: wwa_opentelemetry_configurator-config.cmake
empty-ports/abseil/: vcpkg.json
empty-ports/curl/: vcpkg.json
empty-ports/nlohmann-json/: vcpkg.json
empty-ports/protobuf/: vcpkg.json
empty-ports/zlib/: vcpkg.json
include/opentelemetry/configurator/wwa/: configurator.h  export.h  utils.h
src/: batch_log_record_processor_configurator.cpp  batch_span_processor_configurator.cpp  configurator.cpp  configurator_p.h  helpers.cpp  helpers.h  id_generator_configurator.cpp  internal_logging.cpp  log_record_exporter_configurator.cpp  logger_provider_configurator.cpp  meter_provider_configurator.cpp  metric_exporter_configurator.cpp  periodic_exporting_metric_reader_configurator.cpp  propagator_configurator.cpp  resource_configurator.cpp  span_exporter_configurator.cpp  tracer_provider_configurator.cpp  tracing_sampler_configurator.cpp  utils.cpp
